# Mistle

./: 10_fold_cv.py  10_fold_cv_krimp.py  Mistle - Experiment - Results.xlsx  check_inconcistencies.py  classify.conf  cnfalgo_wrapper.py  cnfalgo_wrapper_aug.py  data_generators.py  estimate_minsups.py  exp1.py  exp1_1.py  exp1_2.py  exp1_3.py  exp2.py  exp2_aug.py  exp3_1_10.py  exp3_1_100.py  exp3_4_10.py  exp3_4_100.py  exp3_uci.py  exp3_uci.sh  exp4.py  exp4_3.sh  exp4_4.sh  exp4_cnfalgo.py  exp4_mdl.py  krimp_wrapper.py  local_wff_3_100_150_100_100_20_data_35.sh  local_wff_3_100_150_100_100_20_data_45.sh  local_wff_3_100_150_100_100_20_data_55.sh  mining4sat_wrapper.py  mistle.py  mistle_beam.py  mistle_class.py  mistle_mdl.py  mistle_numpy.py  mistle_sympy.py  mistle_v2.0.py  mistle_v2.py  pattern_mining.py  (+2 more)
Krimp/trunk/: .cproject  CMakeLists.txt  FicConf.cpp  FicConf.h  fic.conf  fic.vs10.sln  ficmkii.vs08.sln  ficmkii.vs08.vcproj  global.h
Krimp/trunk/algo/: Algo.h  CTISList.cpp  CTISList.h  CTLog.cpp  CodeTable.cpp
Krimp/trunk/algo/coverfull/: CoverFull.cpp  CoverFull.h
Krimp/trunk/algo/coverpartial/: CCCPCodeTable.cpp  CCPCodeTable.cpp  CCPCodeTable.h  CPACodeTable.cpp  CPROCodeTable.cpp  CoverPartial.h  ParallelCoverPartial.cpp
Krimp/trunk/bass/: Bass.cpp  blobal.h
Krimp/trunk/bass/db/: ClassedDatabase.cpp  Database.cpp  DbAnalyser.h  DbFile.cpp  FicDbFile.cpp
Krimp/trunk/bass/isc/: BinaryFicIscFile.h  BinaryFicIscFileAsync.cpp  FicIscFile.cpp  FicIscFile.h  FicIscFileAsync.cpp  FicIscFileAsync.h  IscFile.cpp  IscFile.h  ItemTranslator.cpp
Krimp/trunk/bass/itemstructs/: BAI32ItemSet.cpp  BM128ItemSet.cpp  BM128ItemSet.h  CoverNode.cpp  CoverNode.h  CoverSet.cpp  CoverSet.h  Mask.cpp  Uint16CoverSet.cpp  Uint16CoverSet.h  Uint16ItemSet.cpp
Krimp/trunk/blocks/: Blocks.h
Krimp/trunk/blocks/classifier/: Classifier.cpp  Classifier.h  CtAnalyser.h
Krimp/trunk/blocks/stream/: Histogram.h  StreamAlgo.h
Krimp/trunk/croupier/: Croupier-v08.vcproj  clobal.h  croupier.vs10.vcxproj
Krimp/trunk/croupier/afopt/: AfoptCroupier.cpp  AfoptMiner.cpp  AfoptMiner.h  ArrayMine.cpp  Global.cpp  Global.h  ScanDBMine.h  data.cpp  fsout.h  hash_map.h  parameters.cpp  parameters.h
Krimp/trunk/croupier/apriori/: AprioriCroupier.cpp  AprioriCroupier.h  AprioriMiner.cpp  AprioriNode.h  AprioriTree.cpp  AprioriTree.h
Krimp/trunk/qtils/: AlignedAllocator.h  ArrayUtils.cpp  Config.cpp  Qtils-v08.vcproj  QtilsApi.h  RandomUtils.h  StringUtils.cpp  SystemUtils.h  Thread.cpp  Thread.h  TimeUtils.h  VORegistry.h  glibc_s.h  qtils.vs10.vcxproj  qtils.vs10.vcxproj.filters
Krimp/trunk/qtils/logger/: FileLogger.cpp  FileLogger.h  Logger.cpp
Krimp/trunk/tasks/: ClassifyTH.h  DissimilarityTH.cpp  DissimilarityTH.h  MineTH.cpp  MineTH.h  StreamTH.h  TaskHandler.h
Resources/Krimp/trunk/croupier/: CMakeLists.txt  Croupier.cpp  Croupier.h  CroupierApi.h  croupier.vs10.vcxproj.filters
Resources/Krimp/trunk/qtils/: ArrayUtils.h  CMakeLists.txt  Config.h  FileUtils.cpp  FileUtils.h  Primitives.h  Qtils.h  RandomUtils.cpp  StringUtils.h  SystemUtils.cpp  TimeUtils.cpp  VORegistry.cpp  glibc_s.cpp  qlobal.h
Resources/Slim/trunk/bass/: Bass-v08.vcproj  Bass.cpp  CMakeLists.txt  bass.vs10.vcxproj.filters  bass.vs12.vcxproj.filters
Slim/trunk/: .cproject  .gitignore  CMakeLists.txt  FicMain.h  LocalFic.template.h  bootstrap.sh  fic.vs10.sln  fic.vs10.vcxproj  fic.vs12.vcxproj  fic.vs12.vcxproj.filters  fic.vs13.vcxproj  ficmkii.cpp  global.h
Slim/trunk/bass/: Bass.h  BassApi.h  bass.vs10.vcxproj  bass.vs12.vcxproj  bass.vs13.vcxproj  bass.vs13.vcxproj.filters  blobal.h
Slim/trunk/bass/db/: Database.cpp  Database.h  DbAnalyser.cpp  DbAnalyser.h  DbFile.cpp  FicDbFile.cpp  FicDbFile.h  FicSplitDbFile.cpp  FimiDbFile.cpp
Slim/trunk/bass/isc/: BinaryFicIscFile.cpp  BinaryFicIscFile.h  BinaryFicIscFileAsync.h  FicIscFile.cpp  FicIscFileAsync.cpp  IscFile.cpp  ItemSetCollection.h
Slim/trunk/bass/itemstructs/: BAI32CoverSet.cpp  BAI32CoverSet.h  BAI32ItemSet.cpp  BM128CoverSet.cpp  BM128CoverSet.h  BM128ItemSet.cpp  CoverMask.cpp  CoverMaskArray.h  CoverSet.cpp  ItemSet.h
Slim/trunk/bass/patterncollection/: Pattern.h  PatternCollection.cpp  PatternCollection.h  PatternCollectionFile.cpp
Slim/trunk/blocks/: Blocks.h
Slim/trunk/blocks/classifier/: CtAnalyser.cpp
Slim/trunk/blocks/cluster/: Clusterer.h  DBOntwarreraar.h  Ontwar2Clusterer.cpp  Ontwar2Clusterer.h  OntwarKClusterer.cpp  OntwarKClusterer.h
Slim/trunk/blocks/dgen/: DGSet.h
Slim/trunk/blocks/krimp/: CoverFullAlgo.cpp  Kramp.h  KrimpAlgo.cpp  Kromp.cpp  Krump.h  ParallelCoverFull.h
Slim/trunk/blocks/occlassifier/: OneClassClassifier.cpp
Slim/trunk/blocks/ptree/: PTree.cpp  PTreeNode.h  PTreeSet.cpp  PTreeSet.h
Slim/trunk/blocks/slim/: SlimAlgo.h  SlimMJ.cpp  SlimMJ.h  SlimPlus.h  SlimStar.h
Slim/trunk/blocks/stream/: StreamAlgo.cpp  StreamAlgo.h
Slim/trunk/blocks/tile/: TilingMiner.cpp
Slim/trunk/croupier/: croupier.vs10.vcxproj  croupier.vs12.vcxproj  croupier.vs13.vcxproj  croupier.vs13.vcxproj.filters
Slim/trunk/croupier/afopt/: AFOPTMine.cpp  AfoptCroupier.cpp  AfoptMiner.cpp  AfoptMiner.h  ArrayMine.cpp  Global.h  ScanDBMine.cpp  ScanDBMine.h  fsout.cpp  fsout.h  hash_map.cpp  hash_map.h  parameters.cpp  parameters.h
Slim/trunk/croupier/apriori/: AprioriCroupier.cpp  AprioriCroupier.h  AprioriNode.cpp  AprioriNode.h  AprioriTree.h
Slim/trunk/croupier/lesets/: LESetMiner.h
Slim/trunk/croupier/tiles/: TileMiner.cpp  TileMiner.h  TileOut.cpp
Slim/trunk/qtils/: AlignedAllocator.h  ArrayUtils.cpp  ArrayUtils.h  Config.cpp  Config.h  Primitives.cpp  Qtils.h  RandomUtils.cpp  StringUtils.h  SystemUtils.cpp  glibc_s.cpp  qlobal.h  qtils.vs12.vcxproj  qtils.vs13.vcxproj
Slim/trunk/qtils/logger/: Log.h  StdOutLogger.cpp  StdOutLogger.h
Slim/trunk/tasks/: ClassifyTH.cpp  DataGenTH.h  DataTransformTH.cpp  DissimilarityTH.cpp  LESetsTH.cpp  MainTH.cpp  MineTH.h  MissingValuesTH.cpp  OCClassifyTH.cpp  OCClassifyTH.h  RecommendTH.cpp  RecommendTH.h  TaskHandler.h  TestTH.cpp  TileTH.cpp  TileTH.h
(+5399 files in other folders)
